--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="https://i.ibb.co/GdpsXdz/Untitled.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>toy MarketPlace</title>
+  <title>Toy MarketPlace</title>
   <!-- aos style -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
